--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -99,7 +99,7 @@
        " 'tinyimagenet_root': './tiny-imagenet-200',\n",
        " 'epochs': 50,\n",
        " 'batch_size': 64,\n",
-       " 'num_workers': 2,\n",
+       " 'num_workers': 0,\n",
        " 'lr': 0.05,\n",
        " 'weight_decay': 0.0001,\n",
        " 'momentum': 0.9,\n",
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d5649986",
    "metadata": {},
    "outputs": [],
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1b175a0b",
    "metadata": {},
    "outputs": [],
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d99946ed",
    "metadata": {},
    "outputs": [],
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "f514a61e",
    "metadata": {},
    "outputs": [],
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "dbae9d56",
    "metadata": {},
    "outputs": [],
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "6375e71e",
    "metadata": {},
    "outputs": [],
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "7c1831ba",
    "metadata": {},
    "outputs": [],
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "6c5108da",
    "metadata": {},
    "outputs": [
@@ -1258,59 +1258,16 @@
       "Experiment 1/9: cifar10-c + shufflenetv2_0_5\n",
       "================================================================================\n",
       "\n",
-      "\n",
-      "❌ Error in experiment 1: name 'CIFAR10CDataset' is not defined\n",
-      "\n",
-      "================================================================================\n",
-      "Experiment 2/9: cifar10-c + mobilenetv3_small\n",
-      "================================================================================\n",
-      "\n",
-      "\n",
-      "❌ Error in experiment 2: name 'CIFAR10CDataset' is not defined\n",
-      "\n",
-      "================================================================================\n",
-      "Experiment 3/9: cifar10-c + efficientnetv2_s\n",
-      "================================================================================\n",
-      "\n",
-      "\n",
-      "❌ Error in experiment 3: name 'CIFAR10CDataset' is not defined\n",
-      "\n",
-      "================================================================================\n",
-      "Experiment 4/9: cifar100-c + shufflenetv2_0_5\n",
-      "================================================================================\n",
-      "\n",
-      "\n",
-      "❌ Error in experiment 4: name 'CIFAR100CDataset' is not defined\n",
-      "\n",
-      "================================================================================\n",
-      "Experiment 5/9: cifar100-c + mobilenetv3_small\n",
-      "================================================================================\n",
-      "\n",
-      "\n",
-      "❌ Error in experiment 5: name 'CIFAR100CDataset' is not defined\n",
-      "\n",
-      "================================================================================\n",
-      "Experiment 6/9: cifar100-c + efficientnetv2_s\n",
-      "================================================================================\n",
-      "\n",
-      "\n",
-      "❌ Error in experiment 6: name 'CIFAR100CDataset' is not defined\n",
-      "\n",
-      "================================================================================\n",
-      "Experiment 7/9: tinyimagenet-c + shufflenetv2_0_5\n",
-      "================================================================================\n",
-      "\n",
-      "✓ TinyImageNet already exists at ./data\\tiny-imagenet-200\n",
-      "✓ Loaded Tiny ImageNet-C from local directory - 750000 samples\n",
+      "✓ Loaded CIFAR-10-C: 19 corruptions, severity 5, 190000 total images\n",
       "Training configuration:\n",
       "{\n",
-      "  \"dataset\": \"tinyimagenet-c\",\n",
+      "  \"dataset\": \"cifar10-c\",\n",
       "  \"model_name\": \"shufflenetv2_0_5\",\n",
       "  \"data_root\": \"./data\",\n",
       "  \"tinyimagenet_root\": \"./tiny-imagenet-200\",\n",
       "  \"epochs\": 50,\n",
       "  \"batch_size\": 64,\n",
-      "  \"num_workers\": 2,\n",
+      "  \"num_workers\": 0,\n",
       "  \"lr\": 0.05,\n",
       "  \"weight_decay\": 0.0001,\n",
       "  \"momentum\": 0.9,\n",
@@ -1327,9 +1284,303 @@
       "  \"out_dir\": \"./outputs\"\n",
       "}\n",
       "\n",
-      "✓ Loading pre-trained model from ./outputs\\tinyimagenet_shufflenetv2_0_5_e50_bs64.pth\n",
-      "Saved checkpoint: ./outputs\\tinyimagenet-c_shufflenetv2_0_5_e50_bs64.pth\n"
+      "✓ Loading pre-trained model from ./outputs\\cifar10_shufflenetv2_0_5_e50_bs64.pth\n",
+      "Saved checkpoint: ./outputs\\cifar10-c_shufflenetv2_0_5_e50_bs64.pth\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9dfd7881a1014b758cb2c35a0447b301",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Test+Uncertainty:   0%|          | 0/2969 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Consistency check: test_acc=0.123958 vs accuracy_before_rejection=0.123958\n",
+      "Saved results JSON: ./outputs\\cifar10-c_shufflenetv2_0_5_e50_bs64_results.json\n",
+      "\n",
+      "================================================================================\n",
+      "Experiment 2/9: cifar10-c + mobilenetv3_small\n",
+      "================================================================================\n",
+      "\n",
+      "✓ Loaded CIFAR-10-C: 19 corruptions, severity 5, 190000 total images\n",
+      "Training configuration:\n",
+      "{\n",
+      "  \"dataset\": \"cifar10-c\",\n",
+      "  \"model_name\": \"mobilenetv3_small\",\n",
+      "  \"data_root\": \"./data\",\n",
+      "  \"tinyimagenet_root\": \"./tiny-imagenet-200\",\n",
+      "  \"epochs\": 50,\n",
+      "  \"batch_size\": 64,\n",
+      "  \"num_workers\": 0,\n",
+      "  \"lr\": 0.05,\n",
+      "  \"weight_decay\": 0.0001,\n",
+      "  \"momentum\": 0.9,\n",
+      "  \"input_size\": 224,\n",
+      "  \"reject_percentiles\": [\n",
+      "    10,\n",
+      "    20,\n",
+      "    30,\n",
+      "    40,\n",
+      "    50\n",
+      "  ],\n",
+      "  \"hybrid_weight_entropy\": 0.5,\n",
+      "  \"hybrid_weight_grad\": 0.5,\n",
+      "  \"out_dir\": \"./outputs\"\n",
+      "}\n",
+      "\n",
+      "✓ Loading pre-trained model from ./outputs\\cifar10_mobilenetv3_small_e50_bs64.pth\n",
+      "Saved checkpoint: ./outputs\\cifar10-c_mobilenetv3_small_e50_bs64.pth\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cca4497008f64f38831056e06d4a86a6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Test+Uncertainty:   0%|          | 0/2969 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Consistency check: test_acc=0.070332 vs accuracy_before_rejection=0.070332\n",
+      "Saved results JSON: ./outputs\\cifar10-c_mobilenetv3_small_e50_bs64_results.json\n",
+      "\n",
+      "================================================================================\n",
+      "Experiment 3/9: cifar10-c + efficientnetv2_s\n",
+      "================================================================================\n",
+      "\n",
+      "✓ Loaded CIFAR-10-C: 19 corruptions, severity 5, 190000 total images\n",
+      "Training configuration:\n",
+      "{\n",
+      "  \"dataset\": \"cifar10-c\",\n",
+      "  \"model_name\": \"efficientnetv2_s\",\n",
+      "  \"data_root\": \"./data\",\n",
+      "  \"tinyimagenet_root\": \"./tiny-imagenet-200\",\n",
+      "  \"epochs\": 50,\n",
+      "  \"batch_size\": 64,\n",
+      "  \"num_workers\": 0,\n",
+      "  \"lr\": 0.05,\n",
+      "  \"weight_decay\": 0.0001,\n",
+      "  \"momentum\": 0.9,\n",
+      "  \"input_size\": 224,\n",
+      "  \"reject_percentiles\": [\n",
+      "    10,\n",
+      "    20,\n",
+      "    30,\n",
+      "    40,\n",
+      "    50\n",
+      "  ],\n",
+      "  \"hybrid_weight_entropy\": 0.5,\n",
+      "  \"hybrid_weight_grad\": 0.5,\n",
+      "  \"out_dir\": \"./outputs\"\n",
+      "}\n",
+      "\n",
+      "✓ Loading pre-trained model from ./outputs\\cifar10_efficientnetv2_s_e50_bs64.pth\n",
+      "Saved checkpoint: ./outputs\\cifar10-c_efficientnetv2_s_e50_bs64.pth\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3118c93660684af4859654ef429d9984",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Test+Uncertainty:   0%|          | 0/2969 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Consistency check: test_acc=0.091921 vs accuracy_before_rejection=0.091921\n",
+      "Saved results JSON: ./outputs\\cifar10-c_efficientnetv2_s_e50_bs64_results.json\n",
+      "\n",
+      "================================================================================\n",
+      "Experiment 4/9: cifar100-c + shufflenetv2_0_5\n",
+      "================================================================================\n",
+      "\n",
+      "✓ Loaded CIFAR-100-C: 19 corruptions, severity 5, 190000 total images\n",
+      "Training configuration:\n",
+      "{\n",
+      "  \"dataset\": \"cifar100-c\",\n",
+      "  \"model_name\": \"shufflenetv2_0_5\",\n",
+      "  \"data_root\": \"./data\",\n",
+      "  \"tinyimagenet_root\": \"./tiny-imagenet-200\",\n",
+      "  \"epochs\": 50,\n",
+      "  \"batch_size\": 64,\n",
+      "  \"num_workers\": 0,\n",
+      "  \"lr\": 0.05,\n",
+      "  \"weight_decay\": 0.0001,\n",
+      "  \"momentum\": 0.9,\n",
+      "  \"input_size\": 224,\n",
+      "  \"reject_percentiles\": [\n",
+      "    10,\n",
+      "    20,\n",
+      "    30,\n",
+      "    40,\n",
+      "    50\n",
+      "  ],\n",
+      "  \"hybrid_weight_entropy\": 0.5,\n",
+      "  \"hybrid_weight_grad\": 0.5,\n",
+      "  \"out_dir\": \"./outputs\"\n",
+      "}\n",
+      "\n",
+      "✓ Loading pre-trained model from ./outputs\\cifar100_shufflenetv2_0_5_e50_bs64.pth\n",
+      "Saved checkpoint: ./outputs\\cifar100-c_shufflenetv2_0_5_e50_bs64.pth\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4fef2d50c1b84cc89fef991463a95335",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Test+Uncertainty:   0%|          | 0/2969 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Consistency check: test_acc=0.010179 vs accuracy_before_rejection=0.010179\n",
+      "Saved results JSON: ./outputs\\cifar100-c_shufflenetv2_0_5_e50_bs64_results.json\n",
+      "\n",
+      "================================================================================\n",
+      "Experiment 5/9: cifar100-c + mobilenetv3_small\n",
+      "================================================================================\n",
+      "\n",
+      "✓ Loaded CIFAR-100-C: 19 corruptions, severity 5, 190000 total images\n",
+      "Training configuration:\n",
+      "{\n",
+      "  \"dataset\": \"cifar100-c\",\n",
+      "  \"model_name\": \"mobilenetv3_small\",\n",
+      "  \"data_root\": \"./data\",\n",
+      "  \"tinyimagenet_root\": \"./tiny-imagenet-200\",\n",
+      "  \"epochs\": 50,\n",
+      "  \"batch_size\": 64,\n",
+      "  \"num_workers\": 0,\n",
+      "  \"lr\": 0.05,\n",
+      "  \"weight_decay\": 0.0001,\n",
+      "  \"momentum\": 0.9,\n",
+      "  \"input_size\": 224,\n",
+      "  \"reject_percentiles\": [\n",
+      "    10,\n",
+      "    20,\n",
+      "    30,\n",
+      "    40,\n",
+      "    50\n",
+      "  ],\n",
+      "  \"hybrid_weight_entropy\": 0.5,\n",
+      "  \"hybrid_weight_grad\": 0.5,\n",
+      "  \"out_dir\": \"./outputs\"\n",
+      "}\n",
+      "\n",
+      "✓ Loading pre-trained model from ./outputs\\cifar100_mobilenetv3_small_e50_bs64.pth\n",
+      "Saved checkpoint: ./outputs\\cifar100-c_mobilenetv3_small_e50_bs64.pth\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c40add5130f040408dd8eb423e2e0c55",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Test+Uncertainty:   0%|          | 0/2969 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Consistency check: test_acc=0.010789 vs accuracy_before_rejection=0.010789\n",
+      "Saved results JSON: ./outputs\\cifar100-c_mobilenetv3_small_e50_bs64_results.json\n",
+      "\n",
+      "================================================================================\n",
+      "Experiment 6/9: cifar100-c + efficientnetv2_s\n",
+      "================================================================================\n",
+      "\n",
+      "✓ Loaded CIFAR-100-C: 19 corruptions, severity 5, 190000 total images\n",
+      "Training configuration:\n",
+      "{\n",
+      "  \"dataset\": \"cifar100-c\",\n",
+      "  \"model_name\": \"efficientnetv2_s\",\n",
+      "  \"data_root\": \"./data\",\n",
+      "  \"tinyimagenet_root\": \"./tiny-imagenet-200\",\n",
+      "  \"epochs\": 50,\n",
+      "  \"batch_size\": 64,\n",
+      "  \"num_workers\": 0,\n",
+      "  \"lr\": 0.05,\n",
+      "  \"weight_decay\": 0.0001,\n",
+      "  \"momentum\": 0.9,\n",
+      "  \"input_size\": 224,\n",
+      "  \"reject_percentiles\": [\n",
+      "    10,\n",
+      "    20,\n",
+      "    30,\n",
+      "    40,\n",
+      "    50\n",
+      "  ],\n",
+      "  \"hybrid_weight_entropy\": 0.5,\n",
+      "  \"hybrid_weight_grad\": 0.5,\n",
+      "  \"out_dir\": \"./outputs\"\n",
+      "}\n",
+      "\n",
+      "✓ Loading pre-trained model from ./outputs\\cifar100_efficientnetv2_s_e50_bs64.pth\n",
+      "Saved checkpoint: ./outputs\\cifar100-c_efficientnetv2_s_e50_bs64.pth\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ab7f2051067c43368769196dfb4350db",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Test+Uncertainty:   0%|          | 0/2969 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
