Updated notebook; removed input_size and random horizontal flip

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "215badcd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution ~orch (C:\\Users\\Lycoris\\AppData\\Roaming\\Python\\Python313\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution ~orch (C:\\Users\\Lycoris\\AppData\\Roaming\\Python\\Python313\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution ~orch (C:\\Users\\Lycoris\\AppData\\Roaming\\Python\\Python313\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution ~orch (C:\\Users\\Lycoris\\AppData\\Roaming\\Python\\Python313\\site-packages)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 0. install prerequisites\n",
     "!pip -q install scikit-learn medmnist tqdm ipywidgets jupyter robustbench torch-uncertainty"
@@ -24,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e9a57a97",
    "metadata": {},
    "outputs": [],
@@ -54,16 +43,7 @@
    "execution_count": null,
    "id": "c509ce1d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current device: 0\n",
-      "Device name: NVIDIA GeForce RTX 2050\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 2. reproducibility utilities\n",
     "def set_seed(seed: int):\n",
@@ -87,32 +67,7 @@
    "execution_count": null,
    "id": "7c34b4ba",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'dataset': 'cifar100',\n",
-       " 'model_name': 'shufflenetv2_0_5',\n",
-       " 'data_root': './data',\n",
-       " 'tinyimagenet_root': './tiny-imagenet-200',\n",
-       " 'epochs': 50,\n",
-       " 'batch_size': 64,\n",
-       " 'num_workers': 2,\n",
-       " 'lr': 0.05,\n",
-       " 'weight_decay': 0.0001,\n",
-       " 'momentum': 0.9,\n",
-       " 'input_size': 224,\n",
-       " 'reject_percentiles': (10, 20, 30, 40, 50),\n",
-       " 'hybrid_weight_entropy': 0.5,\n",
-       " 'hybrid_weight_grad': 0.5,\n",
-       " 'out_dir': './outputs'}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3. settings\n",
     "@dataclass\n",
@@ -137,9 +92,6 @@
     "    momentum: float = 0.9\n",
     "    seed: int = 42\n",
     "\n",
-    "    # Input sizing: using 224 aligns with torchvision ImageNet backbones\n",
-    "    input_size: int = 224\n",
-    "\n",
     "    # Percentile rejection\n",
     "    reject_percentiles: Tuple[int, ...] = (10, 20, 30, 40, 50)\n",
     "\n",
@@ -157,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9fef76bf",
    "metadata": {},
    "outputs": [],
@@ -166,7 +118,7 @@
     "IMAGENET_MEAN = (0.485, 0.456, 0.406)\n",
     "IMAGENET_STD  = (0.229, 0.224, 0.225)\n",
     "\n",
-    "def build_transforms(input_size: int, train: bool, dataset_name: str = \"\"):\n",
+    "def build_transforms(train: bool, dataset_name: str = \"\"):\n",
     "    if train:\n",
     "        if dataset_name == \"tissuemnist\":\n",
     "            return transforms.Compose([\n",
@@ -174,8 +126,6 @@
     "                transforms.Normalize(IMAGENET_MEAN, IMAGENET_STD),\n",
     "            ])\n",
     "        return transforms.Compose([\n",
-    "            transforms.RandomHorizontalFlip(p=0.5),\n",
-    "            # transforms.RandomCrop(input_size, padding=int(input_size * 0.04), padding_mode=\"reflect\"),\n",
     "            transforms.ToTensor(),\n",
     "            transforms.Normalize(IMAGENET_MEAN, IMAGENET_STD),\n",
     "        ])\n",
@@ -188,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "036cc958",
    "metadata": {},
    "outputs": [],
@@ -200,8 +150,8 @@
     "    Train: on clean Tiny ImageNet\n",
     "    Test: on corrupted Tiny ImageNet-C (all corruptions, all severities)\n",
     "    \"\"\"\n",
-    "    train_tf = build_transforms(cfg.input_size, train=True, dataset_name=\"tinyimagenet\")\n",
-    "    test_tf  = build_transforms(cfg.input_size, train=False, dataset_name=\"tinyimagenet\")\n",
+    "    train_tf = build_transforms(train=True, dataset_name=\"tinyimagenet\")\n",
+    "    test_tf  = build_transforms(train=False, dataset_name=\"tinyimagenet\")\n",
     "    \n",
     "    # Load regular training data (standard Tiny ImageNet)\n",
     "    tiny_root = download_tinyimagenet(cfg.data_root)\n",
@@ -232,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "dd7c63a8",
    "metadata": {},
    "outputs": [],
@@ -286,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "be430860",
    "metadata": {},
    "outputs": [],
@@ -336,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "01553d49",
    "metadata": {},
    "outputs": [],
@@ -367,8 +317,8 @@
     "    \n",
     "    Note: Test loader uses num_workers=0 for efficiency during evaluation with gradients\n",
     "    \"\"\"\n",
-    "    train_tf = build_transforms(cfg.input_size, train=True, dataset_name=cfg.dataset.replace(\"-c\", \"\"))\n",
-    "    test_tf  = build_transforms(cfg.input_size, train=False, dataset_name=cfg.dataset.replace(\"-c\", \"\"))\n",
+    "    train_tf = build_transforms(train=True, dataset_name=cfg.dataset.replace(\"-c\", \"\"))\n",
+    "    test_tf  = build_transforms(train=False, dataset_name=cfg.dataset.replace(\"-c\", \"\"))\n",
     "    \n",
     "    # Test loaders use 0 workers for efficiency (gradient computation is GPU-bound, not I/O bound)\n",
     "    test_num_workers = 0\n",
@@ -477,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9595346e",
    "metadata": {},
    "outputs": [],
@@ -728,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "1b175a0b",
    "metadata": {},
    "outputs": [],
@@ -758,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "d99946ed",
    "metadata": {},
    "outputs": [],
@@ -814,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "f514a61e",
    "metadata": {},
    "outputs": [],
@@ -882,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "dbae9d56",
    "metadata": {},
    "outputs": [],
@@ -1253,43 +1203,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "6c5108da",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running 9 experiments:\n",
-      "  1. cifar10-c       + shufflenetv2_0_5    \n",
-      "  2. cifar10-c       + mobilenetv3_small   \n",
-      "  3. cifar10-c       + efficientnetv2_s    \n",
-      "  4. cifar100-c      + shufflenetv2_0_5    \n",
-      "  5. cifar100-c      + mobilenetv3_small   \n",
-      "  6. cifar100-c      + efficientnetv2_s    \n",
-      "  7. tinyimagenet-c  + shufflenetv2_0_5    \n",
-      "  8. tinyimagenet-c  + mobilenetv3_small   \n",
-      "  9. tinyimagenet-c  + efficientnetv2_s    \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 12. Define dataset-model pairs to run\n",
     "dataset_model_pairs = [\n",
     "    # Clean datasets\n",
-    "    # (\"cifar10\", \"shufflenetv2_0_5\"),\n",
-    "    # (\"cifar10\", \"mobilenetv3_small\"),\n",
-    "    # (\"cifar10\", \"efficientnetv2_s\"),\n",
-    "    # (\"cifar100\", \"shufflenetv2_0_5\"),\n",
-    "    # (\"cifar100\", \"mobilenetv3_small\"),\n",
-    "    # (\"cifar100\", \"efficientnetv2_s\"),\n",
-    "    # (\"tinyimagenet\", \"shufflenetv2_0_5\"),\n",
-    "    # (\"tinyimagenet\", \"mobilenetv3_small\"),\n",
-    "    # (\"tinyimagenet\", \"efficientnetv2_s\"),\n",
-    "    # (\"tissuemnist\", \"shufflenetv2_0_5\"),\n",
-    "    # (\"tissuemnist\", \"mobilenetv3_small\"),\n",
-    "    # (\"tissuemnist\", \"efficientnetv2_s\"),\n",
+    "    (\"cifar10\", \"shufflenetv2_0_5\"),\n",
+    "    (\"cifar10\", \"mobilenetv3_small\"),\n",
+    "    (\"cifar10\", \"efficientnetv2_s\"),\n",
+    "    (\"cifar100\", \"shufflenetv2_0_5\"),\n",
+    "    (\"cifar100\", \"mobilenetv3_small\"),\n",
+    "    (\"cifar100\", \"efficientnetv2_s\"),\n",
+    "    (\"tinyimagenet\", \"shufflenetv2_0_5\"),\n",
+    "    (\"tinyimagenet\", \"mobilenetv3_small\"),\n",
+    "    (\"tinyimagenet\", \"efficientnetv2_s\"),\n",
+    "    (\"tissuemnist\", \"shufflenetv2_0_5\"),\n",
+    "    (\"tissuemnist\", \"mobilenetv3_small\"),\n",
+    "    (\"tissuemnist\", \"efficientnetv2_s\"),\n",
     "    \n",
     "    # Corrupted datasets\n",
     "    (\"cifar10-c\", \"shufflenetv2_0_5\"),\n",
@@ -1313,90 +1246,7 @@
    "execution_count": null,
    "id": "8e318018",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "================================================================================\n",
-      "Experiment 1/9: cifar10-c + shufflenetv2_0_5\n",
-      "================================================================================\n",
-      "\n",
-      "\n",
-      "❌ Error in experiment 1: name 'CIFAR10CDataset' is not defined\n",
-      "\n",
-      "================================================================================\n",
-      "Experiment 2/9: cifar10-c + mobilenetv3_small\n",
-      "================================================================================\n",
-      "\n",
-      "\n",
-      "❌ Error in experiment 2: name 'CIFAR10CDataset' is not defined\n",
-      "\n",
-      "================================================================================\n",
-      "Experiment 3/9: cifar10-c + efficientnetv2_s\n",
-      "================================================================================\n",
-      "\n",
-      "\n",
-      "❌ Error in experiment 3: name 'CIFAR10CDataset' is not defined\n",
-      "\n",
-      "================================================================================\n",
-      "Experiment 4/9: cifar100-c + shufflenetv2_0_5\n",
-      "================================================================================\n",
-      "\n",
-      "\n",
-      "❌ Error in experiment 4: name 'CIFAR100CDataset' is not defined\n",
-      "\n",
-      "================================================================================\n",
-      "Experiment 5/9: cifar100-c + mobilenetv3_small\n",
-      "================================================================================\n",
-      "\n",
-      "\n",
-      "❌ Error in experiment 5: name 'CIFAR100CDataset' is not defined\n",
-      "\n",
-      "================================================================================\n",
-      "Experiment 6/9: cifar100-c + efficientnetv2_s\n",
-      "================================================================================\n",
-      "\n",
-      "\n",
-      "❌ Error in experiment 6: name 'CIFAR100CDataset' is not defined\n",
-      "\n",
-      "================================================================================\n",
-      "Experiment 7/9: tinyimagenet-c + shufflenetv2_0_5\n",
-      "================================================================================\n",
-      "\n",
-      "✓ TinyImageNet already exists at ./data\\tiny-imagenet-200\n",
-      "✓ Loaded Tiny ImageNet-C from local directory - 750000 samples\n",
-      "Training configuration:\n",
-      "{\n",
-      "  \"dataset\": \"tinyimagenet-c\",\n",
-      "  \"model_name\": \"shufflenetv2_0_5\",\n",
-      "  \"data_root\": \"./data\",\n",
-      "  \"tinyimagenet_root\": \"./tiny-imagenet-200\",\n",
-      "  \"epochs\": 50,\n",
-      "  \"batch_size\": 64,\n",
-      "  \"num_workers\": 2,\n",
-      "  \"lr\": 0.05,\n",
-      "  \"weight_decay\": 0.0001,\n",
-      "  \"momentum\": 0.9,\n",
-      "  \"input_size\": 224,\n",
-      "  \"reject_percentiles\": [\n",
-      "    10,\n",
-      "    20,\n",
-      "    30,\n",
-      "    40,\n",
-      "    50\n",
-      "  ],\n",
-      "  \"hybrid_weight_entropy\": 0.5,\n",
-      "  \"hybrid_weight_grad\": 0.5,\n",
-      "  \"out_dir\": \"./outputs\"\n",
-      "}\n",
-      "\n",
-      "✓ Loading pre-trained model from ./outputs\\tinyimagenet_shufflenetv2_0_5_e50_bs64.pth\n",
-      "Saved checkpoint: ./outputs\\tinyimagenet-c_shufflenetv2_0_5_e50_bs64.pth\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 13. Run all experiments in sequence\n",
     "all_results = []\n",
@@ -1419,7 +1269,6 @@
     "        lr=cfg.lr,\n",
     "        weight_decay=cfg.weight_decay,\n",
     "        momentum=cfg.momentum,\n",
-    "        # input_size=cfg.input_size,\n",
     "        seed=cfg.seed,\n",
     "        reject_percentiles=cfg.reject_percentiles,\n",
     "        hybrid_weight_entropy=cfg.hybrid_weight_entropy,\n",
