testing cifar-10 mobilenet

--- a/notebook (2).ipynb
+++ b/notebook (2).ipynb
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "8e318018",
    "metadata": {},
    "outputs": [
@@ -3435,6 +3435,283 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 039/50 | train_loss=0.7995 | train_acc=0.7168 | lr=0.005737\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1c2a99609ea641ffbe782fbf4b842f96",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Train:   0%|          | 0/782 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 040/50 | train_loss=0.7889 | train_acc=0.7199 | lr=0.004775\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a43661330d27460fa0e7905a3e6a5efd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Train:   0%|          | 0/782 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 041/50 | train_loss=0.7697 | train_acc=0.7260 | lr=0.003892\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "160806909ee746dd8cf48508e249c9b2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Train:   0%|          | 0/782 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 042/50 | train_loss=0.7557 | train_acc=0.7323 | lr=0.003092\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4d90683ee1144a2d9f1ede816e38ef5d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Train:   0%|          | 0/782 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 043/50 | train_loss=0.7422 | train_acc=0.7372 | lr=0.002379\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8e0241a7632e45d4aa4645e910852b23",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Train:   0%|          | 0/782 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 044/50 | train_loss=0.7243 | train_acc=0.7447 | lr=0.001756\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7afcb5e74ce74193aae2748e924233b9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Train:   0%|          | 0/782 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 045/50 | train_loss=0.7127 | train_acc=0.7456 | lr=0.001224\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "209698ee75cc433c8be1db22bbffc6a4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Train:   0%|          | 0/782 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 046/50 | train_loss=0.7024 | train_acc=0.7516 | lr=0.000785\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b858d24508c441c49e71215673649d5d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Train:   0%|          | 0/782 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 047/50 | train_loss=0.6922 | train_acc=0.7529 | lr=0.000443\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "41aba43fed76472a8030bf1867c05f0d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Train:   0%|          | 0/782 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 048/50 | train_loss=0.6856 | train_acc=0.7578 | lr=0.000197\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "47aeb3e223c140fbabd8677f6597e66d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Train:   0%|          | 0/782 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 049/50 | train_loss=0.6754 | train_acc=0.7601 | lr=0.000049\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7695bcab29b04a0d8a6b1a07cc8ca5e9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Train:   0%|          | 0/782 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 050/50 | train_loss=0.6771 | train_acc=0.7608 | lr=0.000000\n",
+      "Saved checkpoint: ./outputs\\cifar10_mobilenetv3_small_e50_bs64.pth\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d62c21ce6f214386bfcc0d4ac351ea4b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Test+Uncertainty:   0%|          | 0/157 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[BATCH 50/157] loss_sum=6.4649e+01 batch_avg_loss=1.0101e+00 logits_max_abs=1.1929e+01 logits_mean=1.0869e-03 nan=False inf=False\n",
+      "[BATCH 100/157] loss_sum=4.5579e+01 batch_avg_loss=7.1217e-01 logits_max_abs=1.1327e+01 logits_mean=-8.0472e-05 nan=False inf=False\n",
+      "[BATCH 150/157] loss_sum=5.6132e+01 batch_avg_loss=8.7707e-01 logits_max_abs=1.2302e+01 logits_mean=-2.0048e-03 nan=False inf=False\n",
+      "=== EVAL DIAGNOSTICS ===\n",
+      "total_samples=10000 total_loss_sum=9.9732e+03 test_loss_avg=9.9732e-01 test_acc=0.6603\n",
+      "max_abs_logit=2.2472e+01 saw_nan=False saw_inf=False\n",
+      "\n",
+      "Consistency check: test_acc=0.660300 vs accuracy_before_rejection=0.660300\n",
+      "Saved results JSON: ./outputs\\cifar10_mobilenetv3_small_e50_bs64_results.json\n",
+      "\n",
+      "================================================================================\n",
+      "All experiments completed in 39725.2 seconds (662.1 minutes)\n",
+      "================================================================================\n",
+      "\n",
+      "Summary: 3 successful, 0 failed\n",
+      "  ✓ cifar10         + efficientnetv2_s    \n",
+      "  ✓ cifar10-c       + efficientnetv2_s    \n",
+      "  ✓ cifar10         + mobilenetv3_small   \n"
+     ]
     }
    ],
    "source": [
@@ -3499,10 +3776,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e9521161",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DIAGNOSTIC TEST - Finding the bottleneck\n",
+      "================================================================================\n",
+      "\n",
+      "[STEP 1] Testing CIFAR-10-C dataset loading...\n",
+      "Looking for files in: ./data/Tiny-ImageNet-C\n",
+      "Found files: ['brightness', 'contrast', 'defocus_blur', 'elastic_transform', 'fog', 'frost', 'gaussian_noise', 'glass_blur', 'impulse_noise', 'jpeg_compression', 'motion_blur', 'pixelate', 'shot_noise', 'snow', 'Tiny-ImageNet-C-extra.tar', 'zoom_blur']\n",
+      "✗ File not found: ./data/Tiny-ImageNet-C\\gaussian_noise.npy\n",
+      "\n",
+      "================================================================================\n",
+      "TOTAL DIAGNOSTIC TIME: 0.0012230873107910156 seconds\n",
+      "================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "# 13a. DIAGNOSTIC: Quick test - where is it hanging?\n",
     "\n",
