fixed tissuemnist error

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9fef76bf",
    "metadata": {},
    "outputs": [],
@@ -167,6 +167,7 @@
     "    if train:\n",
     "        if dataset_name == \"tissuemnist\":\n",
     "            return transforms.Compose([\n",
+    "                transforms.Grayscale(num_output_channels=3),  # Convert 1-channel to 3-channel\n",
     "                transforms.ToTensor(),\n",
     "                transforms.Normalize(IMAGENET_MEAN, IMAGENET_STD),\n",
     "            ])\n",
@@ -175,6 +176,12 @@
     "            transforms.Normalize(IMAGENET_MEAN, IMAGENET_STD),\n",
     "        ])\n",
     "    else:\n",
+    "        if dataset_name == \"tissuemnist\":\n",
+    "            return transforms.Compose([\n",
+    "                transforms.Grayscale(num_output_channels=3),  # Convert 1-channel to 3-channel\n",
+    "                transforms.ToTensor(),\n",
+    "                transforms.Normalize(IMAGENET_MEAN, IMAGENET_STD),\n",
+    "            ])\n",
     "        return transforms.Compose([\n",
     "            transforms.ToTensor(),\n",
     "            transforms.Normalize(IMAGENET_MEAN, IMAGENET_STD),\n",
