--- a/aggregate_results.ipynb
+++ b/aggregate_results.ipynb
@@ -5,7 +5,18 @@
    "execution_count": null,
    "id": "5ae231f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.11.7' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
+      "\u001b[1;31mOr install 'ipykernel' using the command: 'c:/msys64/ucrt64/bin/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "# Aggregation Notebook: Convert per-run JSON results into CSV summaries\n",
     "\n",
@@ -232,8 +243,8 @@
     "df_reject   = pd.read_csv(\"./outputs/csv/percentile_rejection.csv\")\n",
     "\n",
     "# Normalize naming\n",
-    "df_uncert[\"method\"] = df_uncert[\"method\"].map(_clean_method_labels)\n",
-    "df_reject[\"method\"] = df_reject[\"method\"].map(_clean_method_labels)\n",
+    "df_uncert[\"method_display\"] = df_uncert[\"method\"].map(_clean_method_labels)\n",
+    "df_reject[\"method_display\"] = df_reject[\"method\"].map(_clean_method_labels)\n",
     "\n",
     "df_baseline.head(), df_uncert.head(), df_reject.head()"
    ]
@@ -274,25 +285,109 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_auroc_bars(df_uncert):\n",
-    "    # Expect columns: dataset, model, seed, method, AUROC_error\n",
-    "    for (dataset, model), g in df_uncert.groupby([\"dataset\", \"model\"], sort=False):\n",
-    "        # If multiple seeds exist later, take mean; else it’s just one value\n",
-    "        summary = g.groupby(\"method\", as_index=False)[\"AUROC_error\"].mean()\n",
+    "def plot_metric_multipanel_by_model(\n",
+    "    df_uncert: pd.DataFrame,\n",
+    "    metric_col: str,\n",
+    "    fig_name: str,\n",
+    "    title_metric: str,\n",
+    "    datasets_base=(\"cifar10\", \"cifar100\", \"tinyimagenet\"),\n",
+    "    models=(\"shufflenetv2_0_5\", \"mobilenetv3_small\", \"efficientnetv2_s\"),\n",
+    "    methods=(\"entropy\", \"gradnorm\", \"hybrid\"),\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    Multi-panel bar chart: one subplot per model, x-axis = dataset (base),\n",
+    "    bars = methods (entropy/gradnorm/hybrid).\n",
+    "    Produces two figures: clean and corrupted (-c).\n",
     "\n",
-    "        fig = plt.figure()\n",
-    "        ax = plt.gca()\n",
+    "    Expected df_uncert columns:\n",
+    "      - dataset, model, method, metric_col (e.g., AUROC_error or ARC_area)\n",
+    "      - seed optional\n",
+    "    \"\"\"\n",
     "\n",
-    "        ax.bar(summary[\"method\"], summary[\"AUROC_error\"])\n",
-    "        ax.set_ylim(0.0, 1.0)\n",
-    "        ax.set_ylabel(\"AUROC (Error Detection)\")\n",
-    "        ax.set_title(f\"AUROC by Method — {dataset} / {model}\")\n",
-    "        ax.grid(axis=\"y\", alpha=0.3)\n",
+    "    required = {\"dataset\", \"model\", \"method\", metric_col}\n",
+    "    missing = required - set(df_uncert.columns)\n",
+    "    if missing:\n",
+    "        print(f\"[SKIP] Missing columns for {fig_name}: {missing}\")\n",
+    "        return\n",
     "\n",
-    "        save_fig(fig, f\"AUROC_{dataset}_{model}\")\n",
+    "    # Normalize dataset to (base_dataset, regime)\n",
+    "    df = df_uncert.copy()\n",
+    "    df[\"regime\"] = np.where(df[\"dataset\"].astype(str).str.endswith(\"-c\"), \"corrupted\", \"clean\")\n",
+    "    df[\"dataset_base\"] = df[\"dataset\"].astype(str).str.replace(\"-c\", \"\", regex=False)\n",
     "\n",
-    "plot_auroc_bars(df_uncert)\n",
-    "print(f\"Saved AUROC plots to: {FIG_DIR}\")"
+    "    # Only keep target datasets/models/methods\n",
+    "    df = df[df[\"dataset_base\"].isin(datasets_base)]\n",
+    "    df = df[df[\"model\"].isin(models)]\n",
+    "    df = df[df[\"method\"].isin(methods)]\n",
+    "\n",
+    "    # Human-friendly labels\n",
+    "    dataset_label = {\n",
+    "        \"cifar10\": \"CIFAR-10\",\n",
+    "        \"cifar100\": \"CIFAR-100\",\n",
+    "        \"tinyimagenet\": \"Tiny ImageNet\",\n",
+    "    }\n",
+    "    model_label = {\n",
+    "        \"shufflenetv2_0_5\": \"ShuffleNetV2 (0.5×)\",\n",
+    "        \"mobilenetv3_small\": \"MobileNetV3-Small\",\n",
+    "        \"efficientnetv2_s\": \"EfficientNetV2-S\",\n",
+    "    }\n",
+    "    method_label = {\n",
+    "        \"entropy\": \"Entropy\",\n",
+    "        \"gradnorm\": \"Gradient\",\n",
+    "        \"hybrid\": \"Hybrid\",\n",
+    "    }\n",
+    "\n",
+    "    def _plot_for_regime(regime: str):\n",
+    "        df_r = df[df[\"regime\"] == regime]\n",
+    "        if df_r.empty:\n",
+    "            print(f\"[SKIP] No data for {fig_name} ({regime}).\")\n",
+    "            return\n",
+    "\n",
+    "        # Aggregate over seeds if present\n",
+    "        # Using mean is safe; you can switch to median later if needed\n",
+    "        summary = (\n",
+    "            df_r.groupby([\"model\", \"dataset_base\", \"method\"], as_index=False)[metric_col]\n",
+    "            .mean()\n",
+    "        )\n",
+    "\n",
+    "        fig, axes = plt.subplots(1, len(models), figsize=(16, 4), sharey=True)\n",
+    "        if len(models) == 1:\n",
+    "            axes = [axes]\n",
+    "\n",
+    "        x = np.arange(len(datasets_base))\n",
+    "        width = 0.25  # 3 methods\n",
+    "\n",
+    "        for ax, m in zip(axes, models):\n",
+    "            g = summary[summary[\"model\"] == m]\n",
+    "            if g.empty:\n",
+    "                ax.set_title(model_label.get(m, m))\n",
+    "                ax.text(0.5, 0.5, \"No data\", ha=\"center\", va=\"center\", transform=ax.transAxes)\n",
+    "                ax.axis(\"off\")\n",
+    "                continue\n",
+    "\n",
+    "            # Ensure consistent method order\n",
+    "            for i, method in enumerate(methods):\n",
+    "                vals = []\n",
+    "                for d in datasets_base:\n",
+    "                    row = g[(g[\"dataset_base\"] == d) & (g[\"method\"] == method)]\n",
+    "                    vals.append(row[metric_col].iloc[0] if len(row) else np.nan)\n",
+    "\n",
+    "                ax.bar(x + (i - 1) * width, vals, width, label=method_label.get(method, method))\n",
+    "\n",
+    "            ax.set_title(model_label.get(m, m))\n",
+    "            ax.set_xticks(x)\n",
+    "            ax.set_xticklabels([dataset_label.get(d, d) for d in datasets_base], rotation=0)\n",
+    "            ax.set_ylim(0.0, 1.0)\n",
+    "            ax.grid(axis=\"y\", alpha=0.25)\n",
+    "\n",
+    "        fig.suptitle(f\"{title_metric} by Dataset ({regime.capitalize()})\", y=1.05)\n",
+    "        axes[0].set_ylabel(title_metric)\n",
+    "        axes[-1].legend(loc=\"lower right\")\n",
+    "\n",
+    "        save_fig(fig, f\"{fig_name}_{regime}.png\")\n",
+    "\n",
+    "    _plot_for_regime(\"clean\")\n",
+    "    _plot_for_regime(\"corrupted\")"
    ]
   },
   {
@@ -327,23 +422,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_arc_area_bars(df_uncert):\n",
-    "    for (dataset, model), g in df_uncert.groupby([\"dataset\", \"model\"], sort=False):\n",
-    "        summary = g.groupby(\"method\", as_index=False)[\"ARC_area\"].mean()\n",
+    "def plot_auroc_multipanel(df_uncert: pd.DataFrame):\n",
+    "    plot_metric_multipanel_by_model(\n",
+    "        df_uncert=df_uncert,\n",
+    "        metric_col=\"AUROC_error\",\n",
+    "        fig_name=\"auroc_multipanel\",\n",
+    "        title_metric=\"AUROC (Error Detection)\",\n",
+    "    )\n",
     "\n",
-    "        fig = plt.figure()\n",
-    "        ax = plt.gca()\n",
+    "def plot_arc_multipanel(df_uncert: pd.DataFrame):\n",
+    "    plot_metric_multipanel_by_model(\n",
+    "        df_uncert=df_uncert,\n",
+    "        metric_col=\"ARC_area\",\n",
+    "        fig_name=\"arc_multipanel\",\n",
+    "        title_metric=\"ARC Area (Selective Prediction)\",\n",
+    "    )\n",
     "\n",
-    "        ax.bar(summary[\"method\"], summary[\"ARC_area\"])\n",
-    "        ax.set_ylim(0.0, 1.0)\n",
-    "        ax.set_ylabel(\"ARC Area (Higher is Better)\")\n",
-    "        ax.set_title(f\"ARC Area by Method — {dataset} / {model}\")\n",
-    "        ax.grid(axis=\"y\", alpha=0.3)\n",
+    "plot_auroc_multipanel(df_uncert)\n",
+    "plot_arc_multipanel(df_uncert)\n",
     "\n",
-    "        save_fig(fig, f\"ARC_area_{dataset}_{model}\")\n",
-    "\n",
-    "plot_arc_area_bars(df_uncert)\n",
-    "print(f\"Saved ARC-area plots to: {FIG_DIR}\")"
+    "print(\"Done. Figures saved to:\", FIG_DIR)"
    ]
   },
   {
@@ -486,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
